[package]
name = "math-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "r2d2"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
bcrypt = "0.17.0"
jsonwebtoken = "8.0"
serde_json = "1.0"
